--- a/app/app.css
+++ b/app/app.css
@@ -30,3 +30,7 @@ TextField {
     font-weight: bold;
     vertical-align: center;
 }
+ActionBar {
+    background-color:  #3C5AFD;
+    color: white;
+}
